3 (and a half) Complete Scenes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Intern Prototype</title>
+    <title>Unity WebGL Player | Beyond the Backyard</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 1920px; height: 1080px"></div>
+      <div id="gameContainer" style="width: 1024px; height: 576px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Intern Prototype</div>
+        <div class="title">Beyond the Backyard</div>
       </div>
     </div>
   </body>
